# pyproject.toml (put this at the repo root)

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "track-mate-visualisation"
version = "0.1.0"
description = "Utilities to load and visualise TrackMate/edge CSVs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Philipp Ziegler" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://example.com/track-mate-visualisation"
Repository = "https://example.com/track-mate-visualisation"

# Optional: a CLI entry point (if you add a main() in track_mate_visualisation/plot.py)
[project.scripts]
trackmate-plot = "track_mate_visualisation.plot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["track_mate_visualisation*"]
exclude = ["dust_trajectories*"]

